# physics-backend

./: .env  README.md  get_start.ipynb  main.py  pyproject.toml
src/main/core/: config.py  logger.py
src/main/models/: __init__.py  physicsSolver.py
src/main/routers/: __init__.py  physicsSolver.py
src/main/services/: __init__.py  physicsSolver.py
src/test/: test_image_solve.py
